--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,7 +22,7 @@
     -->
     <title>DigiWiz</title>
   </head>
-  <body>
+  <body style="background: antiquewhite">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
